gallery/tests/snapshots/snapshots__typography.snap
---
source: gallery/tests/snapshots.rs
expression: html
---
<!doctype html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1"><meta name="theme-color" media="(prefers-color-scheme: light)" content="oklch(99.00% 0.0012 250.00)"><meta name="theme-color" media="(prefers-color-scheme: dark)" content="oklch(16.00% 0.0012 250.00)"><title>Typography — stucco gallery</title><script>try {
  const t = localStorage.getItem("stucco-theme");
  if (t === "light" || t === "dark") document.documentElement.dataset.theme = t;
} catch (_) {}
</script><link rel="stylesheet" href="/_stucco/stucco.HASH.css"></head><body><a class="st-skip-link" href="#main">Skip to main content</a><main id="main"><div class="st-container g-page" data-size="xl"><div class="st-stack" data-space="10"><div class="st-stack" data-space="3"><a class="st-link" href="index.html">← Gallery</a><h1 class="st-heading" data-size="3xl">Typography</h1><p class="st-text" data-size="lg" data-tone="muted">Headings with independent level and size, toned text, safe links and inline code.</p></div><section><div class="st-stack" data-space="4"><h2 class="st-heading" data-size="2xl">Heading</h2><div class="st-stack" data-space="2"><h3 class="st-heading" data-size="3xl">Heading at size 3xl</h3><h3 class="st-heading" data-size="2xl">Heading at size 2xl</h3><h3 class="st-heading" data-size="xl">Heading at size xl</h3><h3 class="st-heading" data-size="lg">Heading at size lg</h3><h3 class="st-heading" data-size="md">Heading at size md</h3><h3 class="st-heading" data-size="sm">Heading at size sm</h3></div></div></section><section><div class="st-stack" data-space="4"><h2 class="st-heading" data-size="2xl">Text</h2><div class="st-stack" data-space="2"><p class="st-text" data-size="md">Default text</p><p class="st-text" data-size="md" data-tone="muted">Muted text</p><p class="st-text" data-size="md" data-tone="accent">Accent text</p><p class="st-text" data-size="md" data-tone="success">Success text</p><p class="st-text" data-size="md" data-tone="warning">Warning text</p><p class="st-text" data-size="md" data-tone="danger">Danger text</p><p class="st-text" data-size="md" data-tone="info">Info text</p><p class="st-text" data-size="md" data-weight="bold">Bold text</p><p class="st-text" data-size="sm">Small text</p></div></div></section><section><div class="st-stack" data-space="4"><h2 class="st-heading" data-size="2xl">Link</h2><div class="st-cluster" data-space="6"><a class="st-link" href="palette.html">Internal link</a><a class="st-link" href="https://lucide.dev" target="_blank" rel="noopener noreferrer">External link<span class="st-sr-only"> (opens in a new tab)</span></a></div></div></section><section><div class="st-stack" data-space="4"><h2 class="st-heading" data-size="2xl">Code and Kbd</h2><div class="st-stack" data-space="3"><p class="st-text" data-size="md">Run <code class="st-code">cargo run -p gallery</code> to rebuild this site.</p><p class="st-text" data-size="md">Open the command palette with <kbd class="st-kbd"><kbd>Ctrl</kbd>+<kbd>K</kbd></kbd>.</p></div></div></section></div></div></main></body></html>
